# ProjektC

./: .gitignore  CMakeLists.txt  README.md  build-and-run.sh  build.sh  start.sh
ProjektC/Code/: DataHandler.c  Header.h  main.c
ProjektC/Code/Handlers/: CreateFileHandler.c  CreateFileHandler.h  DataHandler.c  DataHandler.h  DateHandler.c  DateHandler.h  SaveFileHandler.c  SaveFileHandler.h  StringHandler.c  StringHandler.h  Vector.c  Vector.h
